# discord-music-bot-rust

./: .env.example  .gitignore  CORRECTIONS_EGG.md  Cargo.toml  FIX_OOM_COMPILATION.md  GUIDE_PROFILS_COMPILATION.md  INSTALLATION.md  LICENSE  PTERODACTYL.md  README.md  egg-discord-music-bot-rust.json
.cargo/: config.toml
src/: main.rs
