[package]
name = "discord-music-bot"
version = "1.0.0"
edition = "2021"
authors = ["Discord Music Bot Contributors"]
description = "Un bot Discord avancé pour lire de la musique YouTube avec interface interactive"
license = "MIT"
repository = "https://github.com/LHRICO78/discord-music-bot-rust"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
songbird = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
youtube_dl = "0.9"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
